refactor: adds username|employee_id in user claims resource
